Add Link to Style and Footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion App</title>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
 
@@ -12,6 +13,11 @@
       <h1>Discover hidden places in the world around you</h1>
       <a href="#"><h3>Download Excursion (Coming soon!)</h3></a>
     </header>
+
+
+    <footer>
+
+    </footer>
 
   </body>
 </html>
