Add Video and Image resources

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Excursion App</title>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+
   </head>
   <body>
 
@@ -14,6 +13,11 @@
       <a href="#"><h3>Download Excursion (Coming soon!)</h3></a>
     </header>
 
+    <section>
+      <video src="videofile.ogg" autoplay poster="posterimage.jpg">
+        Video Not Supported
+      </video>
+    </section>
 
     <footer>
 
