Add all content and styles

--- a/index.html
+++ b/index.html
@@ -14,13 +14,27 @@
     </header>
 
     <section>
-      <video src="videofile.ogg" autoplay poster="posterimage.jpg">
-        Video Not Supported
-      </video>
+      <video class="promovid" autoplay muted loop>
+      <source src="resources/video/excursion.mp4" type="video/mp4">
+        Video Unsupported On Your Browser
+    </video>
+    </section>
+
+    <section>
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you. </p>
+      <img src="resources/images/camp.jpg" alt="Campsite With illuminated tents at night">
+
+    </section>
+
+    <section>
+      <img src="resources/images/phone.png" alt="">
+      <h2>Coming Soon for iPhone and Android</h2>
+      <a href="#"><p>Download Excursion (Coming soon!)</p></a>
     </section>
 
     <footer>
-
+© Excursion
     </footer>
 
   </body>
