Update h2 and p styles and amend 'Coming Soon' anchors links

--- a/index.html
+++ b/index.html
@@ -10,31 +10,32 @@
 
     <header>
       <h1>Discover hidden places in the world around you</h1>
-      <a href="#"><h3>Download Excursion (Coming soon!)</h3></a>
+      <p><a href="#">Download Excursion (Coming soon!)</a></p>
     </header>
 
+    <!-- VIDEO SECTION -->
     <section>
-      <video class="promovid" autoplay muted loop>
-      <source src="resources/video/excursion.mp4" type="video/mp4">
+      <video autoplay muted loop>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
         Video Unsupported On Your Browser
     </video>
     </section>
-
+    <!-- PERSONAL TRAVEL GUIDE -->
     <section>
       <h2>Your personal travel guide</h2>
       <p>Excursion remembers places you like, and recommends new points of interest around you. </p>
-      <img src="resources/images/camp.jpg" alt="Campsite With illuminated tents at night">
+      <p><img src="resources/images/camp.jpg" alt="Campsite With illuminated tents at night"></p>
 
     </section>
-
+    <!-- COMING SOON SECTION -->
     <section>
-      <img src="resources/images/phone.png" alt="">
+      <p><img src="resources/images/phone.png" alt="Smartphone Icon"></p>
       <h2>Coming Soon for iPhone and Android</h2>
-      <a href="#"><p>Download Excursion (Coming soon!)</p></a>
+      <p><a href="#">Download Excursion (Coming soon!)</a></p>
     </section>
 
     <footer>
-© Excursion
+      <p id="text_right">© Excursion</p>
     </footer>
 
   </body>
